--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -16,35 +16,40 @@
       <div class="collection_name mb-4">{{ block.title }}</div>
       <div class="row flex-column flex-lg-row justify-content-lg-between">
         <div class="col-12 col-lg-8 mb-4 mb-lg-0 collection_slider_block">
+
           <div id="carousel{{ block.id }}" class="carousel slide">
+
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              {% for image in block.images.carousel_images.all %}
+                <button type="button" data-bs-target="#carousel{{ block.id }}" 
+                        data-bs-slide-to="{{ forloop.counter0 }}" 
+                        class="{% if forloop.first %}active{% endif %}" 
+                        aria-current="{% if forloop.first %}true{% endif %}" 
+                        aria-label="Slide {{ forloop.counter }}">
+                </button>
+              {% endfor %}
             </div>
 
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="{{ block.image1.url }}" class="d-block w-100" alt="">
-              </div>
-              <div class="carousel-item">
-                <img src={% static "images/product-slide2.jpg" %} class="d-block w-100" alt="">
-              </div>
-              <div class="carousel-item">
-                <img src={% static "images/product-slide.jpg" %} class="d-block w-100" alt="">
-              </div>
+              {% for image in block.images.carousel_images.all %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                  <img src="{{ image.image.url }}" class="d-block w-100" alt="">
+                </div>
+              {% endfor %}
             </div>
 
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Предыдущий</span>
             </button>
+
             <button class="carousel-control-next" type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Следующий</span>
             </button>
             
           </div>
+
         </div>
 
         <div class="d-flex d-lg-block justify-content-between col-12 col-lg-4 px-0 product_aside">
