--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -3,36 +3,7 @@
 {% load format_tags %}
 
 {% block content %}
-			<div class="row justify-content-between align-items-lg-start mb-5 mb-lg_8">
-				{% comment %} <div class="col-12 col-lg-7 product_image_block">
-					<div id="carousel" class="carousel slide">
-						<div class="d-flex d-lg-none carousel-indicators">
-							<button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-							<button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-							<button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-							<button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-							<button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
-						</div>
-						<div class="d-block d-lg-flex flex-lg-wrap carousel-inner">
-							<div class="col-lg-12 carousel-item active">
-								<img src={% static "images/product-slide.jpg" %} class="d-block w-100" alt="">
-							</div>
-							<div class="col-lg-6 carousel-item">
-								<img src={% static "images/product-slide2.jpg" %} class="d-block w-100" alt="">
-							</div>
-							<div class="col-lg-6 carousel-item">
-								<img src={% static "images/product-slide.jpg" %} class="d-block w-100" alt="">
-							</div>
-							<div class="col-lg-12 carousel-item">
-								<img src={% static "images/product-slide2.jpg" %} class="d-block w-100" alt="">
-							</div>
-							<div class="col-lg-12 carousel-item">
-								<img src={% static "images/product-slide.jpg" %} class="d-block w-100" alt="">
-							</div>
-						</div>
-					</div>
-				</div> {% endcomment %}
-                
+			<div class="row justify-content-between align-items-lg-start mb-5 mb-lg_8">   
                 <div class="col-12 col-lg-7 product_image_block">
                     <div id="carousel" class="carousel slide">
                         <div class="d-flex d-lg-none carousel-indicators">
@@ -147,6 +118,10 @@
                                         
                                         {% if image_alt %}
                                             <img class="second_img" src="{{ image_alt.image.url }}" class="d-block w-100" alt="{{ product.name }}">
+                                        {% elif not main_image %}
+                                            <img class="second_img" src="{% static 'images/no-product-image.jpg' %}" class="d-block w-100" alt="No Product Image">
+                                        {% else %}
+                                            <img class="second_img" src="{{ main_image.image.url }}" class="d-block w-100" alt="{{ product.name }}">                                        
                                         {% endif %}
                                     </a>
                                 {% endwith %}
