--- a/main/templates/main/order.html
+++ b/main/templates/main/order.html
@@ -10,7 +10,7 @@
     <div class="cart-container" id="cart-items-container">
         {% for cart in carts %}
         
-            <div class="row justify-content-between align-items-lg-center cart_product_block">
+            <div class="row justify-content-between align-items-lg-center cart_product_block" id="cart-item-{{ cart.id }}">
                 <div class="cart_product_image_block">
                     <a href="{% url "goods:product" cart.product.slug %}">
                         <img src="{{ cart.product.images.all.0.image.url }}" class="d-block w-100" alt="{{ cart.product.name }}">
