--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -2,7 +2,7 @@
 {% load format_tags %}
 
 
-<div class="cart_menu">
+<div id="cart-items-container" class="cart_menu">
   <div class="cart_menu_content">
 
     {% if carts %}
@@ -27,11 +27,11 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center pe-2">
-                <div class="cart_menu_q">
+                <div class="cart_menu_q input-group">
 
-                  <button type="button" class="q_btn dec">-</button>
-                  <input type="text" name="q_item" class="cart_menu_item_q" value="{{ cart.quantity }}">
-                  <button type="button" class="q_btn inc">+</button>
+                  <button type="button" class="q_btn decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url "cart:cart_change" %}">{% csrf_token %}-</button>
+                  <input id="goods-in-cart-count" type="text" name="q_item" class="cart_menu_item_q number" value="{{ cart.quantity }}">
+                  <button type="button" class="q_btn increment" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url "cart:cart_change" %}">{% csrf_token %}+</button>
 
                 </div>
 
