создал приложение orders, перенес туда order.html

--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="cart_menu_footer">
-        <a href="{% url "main:order" %}" class="btn primary-btn">Оформить заказ</a>
+        <a href="{% url "orders:order" %}" class="btn primary-btn">Оформить заказ</a>
       </div>
 
     {% else %}
