--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -86,13 +86,24 @@
 
     <div class="row align-items-lg-start justify-content-between">
         <div class="col-12 col-lg-6 checkout_form_block order-2 order-lg-1">
-            <form action="">
-                <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 1:">
+            <form action="{% url "orders:order" %}" method="post">
+                {% csrf_token %}
+                <input class="checkout_input" type="text" name="first_name" value="" placeholder="Имя">
+                <input class="checkout_input" type="text" name="last_name" value="" placeholder="Фамилия">
+                <input class="checkout_input" type="text" name="phone_number" value="" placeholder="Номер телефона">
+                <input class="checkout_input" type="text" name="email" value="" placeholder="EMAIL">
+                <input class="checkout_input" type="text" name="delivery_address" value="" placeholder="Адресс доставки">
+
+
+
+
+
+                {% comment %} <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 1:">
                 <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 2:">
                 <input class="checkout_input" type="text" name="" value="" placeholder="EMAIL:">
                 <input class="checkout_input" type="text" name="" value="" placeholder="ТЕЛЕФОН:">
                 <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 3:">
-                <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 4:">
+                <input class="checkout_input" type="text" name="" value="" placeholder="ПОЛЕ 4:"> {% endcomment %}
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
