--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -32,15 +32,21 @@
             <a class="py-2 py-lg-4" href="{% url "goods:product" product.slug %}">
                 <div class="product_item_name">{{ product.name }}</div>
 
-                {% if product.discount_price %}
-                    <div class="product_item_price">
-                        <div class="price_old">{{ product.price|format_price }}</div>
-                        <div>{{ product.sell_price|format_price }}</div>
-                    </div>
+                {% if product.quantity >= 1 %}
+                    {% if product.discount_price %}
+                        <div class="product_item_price">
+                            <div class="price_old">{{ product.price|format_price }}</div>
+                            <div>{{ product.sell_price|format_price }}</div>
+                        </div>
+
+                    {% else %}
+                        <div class="product_item_price">{{ product.price|format_price }}</div>
+                    
+                    {% endif %}
 
                 {% else %}
-                    <div class="product_item_price">{{ product.price|format_price }}</div>
-                
+                    <div class="product_item_price">Нет в наличии</div>
+
                 {% endif %}
             </a>
         </div>
