--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -26,12 +26,18 @@
                         </div>
 
                         <div class="col d-none d-lg-block d-xl-flex justify-content-between catr_product_price">
-                            {% if cart.product.discount_price %}
-                            <span class="d-block d-xl-inline price_old mb-0">{{ cart.product.price|format_price }}</span>
-                            {{ cart.product.sell_price|format_price }}
+                            {% if cart.product.quantity >= 1 %}
+                                {% if cart.product.discount_price %}
+                                    <span class="d-block d-xl-inline price_old mb-0">{{ cart.product.price|format_price }}</span>
+                                    {{ cart.product.sell_price|format_price }}
 
+                                {% else %}
+                                    {{ cart.product.sell_price|format_price }}
+                                
+                                {% endif %}
+                            
                             {% else %}
-                            {{ cart.product.sell_price|format_price }}
+                                <div class="text-warning">Нет в наличии</div>
                             
                             {% endif %}
                         </div>
@@ -45,10 +51,12 @@
                             <input id="goods-in-cart-count" type="text" name="q_item" 
                                 class="cart_item_q number" value="{{ cart.quantity }}" readonly>
                             
-                            <button type="button" class="q_btn increment" 
-                                    data-cart-id="{{ cart.id }}" 
-                                    data-cart-change-url="{% url "carts:cart_change" %}">
-                                    {% csrf_token %}+</button>
+                            {% if cart.quantity < cart.product.quantity %}
+                                <button type="button" class="q_btn increment" 
+                                        data-cart-id="{{ cart.id }}" 
+                                        data-cart-change-url="{% url "carts:cart_change" %}">
+                                        {% csrf_token %}+</button>   
+                            {% endif %}
                         </div>					
 
                         <div class="col-auto catr_product_price">{{ cart.total_price }}</div>
