добавил опции товаров - просто ссылки на другие товары

--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -55,21 +55,25 @@
                             {% endif %}
 
                         {% endif %}
-
-                        {% if product.options and product.options.all.exists %}
+                        {% if product.options.exists %}
                             <div class="col product_option_block order-3 mt-4 mt-lg-0">
                                 <div class="product_option_name mb-3 mb-lg-2">Варианты:</div>
                                 <div class="product_option">
-                                    <input class="select_input" type="hidden" name="" value="1">
-                                    <div class="select_head">option 1</div>
+                                    <input class="select_input" type="hidden" name="product_option" value="{{ product.options.first.id }}">
+                                    
+                                    <div class="select_head">
+                                        {{ product.options.first.name }}
+                                    </div>
+                                    
                                     <ul class="select_list">
-                                        <li class="select_item">option 1</li>
-                                        <li class="select_item">option 2</li>
-                                        <li class="select_item">option 3</li>
+                                        {% for option in product.options.all %}
+                                            <a href="{% url 'goods:product' option.slug %}">
+                                                <li class="select_item">{{ option.name }}</li>
+                                            </a>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                             </div>
-
                         {% endif %}
 
 
