--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -15,7 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type='text/css' href={% static "css/bootstrap.min.css" %}>
-  <link rel="stylesheet" type='text/css' href={% static "css/style.css" %}>
+  <link rel="stylesheet" type='text/css' href="{% static "css/style.css" %}?v=1.0">
 
 </head>
 
@@ -111,7 +111,7 @@
 
     <script src={% static "js/bootstrap.bundle.min.js" %}></script>
     <script src={% static "js/jquery-3.7.0.min.js" %}></script>
-    <script src={% static "js/script.js" %}></script>	
+    <script src="{% static "js/script.js" %}?v=1.0"></script>	
 </body>
 
 </html>
