--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -30,17 +30,12 @@
                 <div class="cart_menu_q input-group">
 
                   <button type="button" class="q_btn decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url "cart:cart_change" %}">{% csrf_token %}-</button>
-                  <input id="goods-in-cart-count" type="text" name="q_item" class="cart_menu_item_q number" value="{{ cart.quantity }}" readonly>
+                  <input id="goods-in-cart-count-modal" type="text" name="q_item" class="cart_menu_item_q number" value="{{ cart.quantity }}" readonly>
                   <button type="button" class="q_btn increment" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url "cart:cart_change" %}">{% csrf_token %}+</button>
 
                 </div>
 
-                {% if cart.product.quantity >= 1 %}
                   <div class="cart_menu_item_price">{{ cart.product.sell_price|format_price }}</div>
-                
-                {% else %}
-                  <div class="cart_menu_item_price text-warning">Закончился</div>
-                {% endif %}
 
               </div>
             </div>
