--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,7 +13,7 @@
 
   {% elif block_type == 'content' %}
     <div class="product_{{ block.alignment }} mb_2_8 mb-lg_5">
-      <div class="collection_name mb-4">{{ block.title }}</div>
+      <div class="collection_name mb-4">{{ block.title|safe }}</div>
       <div class="row flex-column flex-lg-row justify-content-lg-between">
         <div class="col-12 col-lg-8 mb-4 mb-lg-0 collection_slider_block">
 
@@ -129,7 +129,48 @@
         </div>
       </div>
     </div>
+  {% elif block_type == 'carousel' %}
+    <div class="collection_name mb-4">{{ block.title|safe }}</div>
+    <div class="col-12 col-lg-8 mb-4 mb-lg-0 collection_slider_block">
 
+      <div id="carousel{{ block.id }}" class="carousel slide">
+
+        <div class="carousel-indicators">
+          {% for image in block.carousel.carousel_images.all %}
+            {% if image.image %}
+              <button type="button" data-bs-target="#carousel{{ block.id }}" 
+                      data-bs-slide-to="{{ forloop.counter0 }}" 
+                      class="{% if forloop.first %}active{% endif %}" 
+                      aria-current="{% if forloop.first %}true{% endif %}" 
+                      aria-label="Slide {{ forloop.counter }}">
+              </button>
+            {% endif %}
+          {% endfor %}
+        </div>
+
+        <div class="carousel-inner">
+          {% for image in block.carousel.carousel_images.all %}
+            {% if image.image %}
+              <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                <img src="{{ image.image.url }}" class="d-block w-100" alt="">
+              </div>            
+            {% endif %}
+          {% endfor %}
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Предыдущий</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel{{ block.id }}" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Следующий</span>
+        </button>
+        
+      </div>
+
+    </div>
   {% endif %}
 {% endfor %}
 
