--- a/static/css/style.css
+++ b/static/css/style.css
@@ -588,6 +588,21 @@ a, a:hover, a:active, a:focus{
     font-weight: bold;
 }
 
+.collection_slider_block .carousel-item {
+	position: relative;
+	width: 100%;
+	aspect-ratio: 3/4; 
+	overflow: hidden;
+}
+  
+.collection_slider_block .carousel-item img {
+	position: absolute;
+	top: 0; 
+	left: 0;
+	width: 100%; 
+	height: 100%;
+	object-fit: cover;
+}
 
 
 @media (min-width: 576px) {
