добавил кнопку наверх

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -109,6 +109,10 @@
   
     </footer>
 
+    <div id="scroll-to-top" class="scroll-to-top" onclick="scrollToTop()">
+      <img src="{% static 'icon/up_arrow.png' %}" alt="Наверх">
+    </div>
+
     <script src={% static "js/bootstrap.bundle.min.js" %}></script>
     <script src={% static "js/jquery-3.7.0.min.js" %}></script>
     <script src="{% static "js/script.js" %}?v=1.0"></script>	
