--- a/static/css/style.css
+++ b/static/css/style.css
@@ -658,8 +658,29 @@ a, a:hover, a:active, a:focus{
   .my-fullwidth-carousel .carousel-control-next {
 	right: 1rem; /* то же самое для правой кнопки */
   }
-  
 
+  /* Кнопка прокрутки наверх */
+.scroll-to-top {
+	position: fixed;
+	bottom: 20px; /* Отступ от низа */
+	right: 20px; /* Отступ от правого края */
+	width: 100px; /* Размер кнопки */
+	height: 100px;
+	display: none; /* Скрываем по умолчанию */
+	cursor: pointer;
+	z-index: 1000; /* Чтобы всегда быть выше остальных элементов */
+	background-color: rgba(255, 255, 255, 1); /* Фон для большей читаемости */
+	border-radius: 50%; 
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень */
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .scroll-to-top img {
+	width: 70%; /* Размер изображения относительно кнопки */
+	height: auto;
+	object-fit: contain;
+  }
 
 @media (min-width: 576px) {
 	
